fix(a2): materialize ArrayList before OGNL-reflected sweep query (JPMS fix)
A2OrphanSweep.fetchFetchableParity() passed a java.util.HashMap$Values view
into Camunda/CadenzaFlow's MyBatis/OGNL-evaluated selectExternalTasksForTopics
query; OGNL reflects on the parameter's actual runtime class to evaluate the
dynamic-SQL guard, and HashMap$Values.size() is JDK-internal and blocked by
JPMS on JDK16+/21 without --add-opens java.base/java.util=ALL-UNNAMED (not
configured anywhere in this repo). Every sweepCycle() threw
InaccessibleObjectException, silently disabling the orphan-sweep safety net
(ADR-0002/0003) in every default deployment.

Wrap instructions.values() in a plain ArrayList before it crosses into the
MyBatis/OGNL-reflected engine API. Re-enables the QA-authored regression test
(camunda) and mirrors both the fix and the test to cadenzaflow-nats-channel.

Sentinel Phase 5.5 QA finding, BLOCKING severity (Levent karari 2026-07-15).

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>